<resources>
    <string name="app_name">Stumps11</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AboutUs">Welcome to your one stop destination for fantasy sports. Here, at Stumps11 you will get ample opportunities to earn money by utilizing the knowledge in the field of sports. We allow our users to enjoy cricket, make fantasy teams and win real cash daily. Just select the match you want to play in, join the contest you wish to compete in, create a virtual team from the set of on field players, and boom you are all set to go into the real of Real fantasy.Stumps11 is the fastest-growing fantasy sports platform where you get the best fantasy games at your fingertips. We offer the best gaming experience to our users and help them to enhance their skills by creating a learning environment that facilitates practice. Started as a platform merely dedicated to fantasy cricket leagues. The fantasy platform of Stumps11 is revolutionizing the web gaming industry with its unique and innovative product offering. Users not only get a chance to fulfill their dreams by making the best use of their knowledge of the game but also hone their expertise.We at Stumps11 also offer a safe and secured platform for our users to keep their confidential information intact. We understand our users and serve them with the best features to strengthen their experience with us. In recent times, fantasy cricket sites have gained a lot of traction, and Stumps11 is trying to build trust on such fantasy platforms with its top notch performance and attentive service. Join India’s best fantasy cricket app and become a part of the biggest sports community.</string>
    <string name="HowToPlay1">Stumps11 is a Game of Skill where you create a team of real players for an upcoming match and compete with other fans for big prizes.</string>
    <string name="HowToPlay2">Your team earns points based on your players’ performances in the real-life match, so make sure you make the right choices!</string>
    <string name="HowToPlay3">1. Select A Match</string>
    <string name="HowToPlay4">Stumps11 hosts games across many different sports. Click on an upcoming match you want to play and keep an eye on the match deadline.</string>
    <string name="HowToPlay5">2. Create Your Teams</string>
    <string name="HowToPlay6">Use your knowledge of sports to pick a team within a budget of 100 credits who you think will score the most points for the selected match.</string>
    <string name="HowToPlay7">What are credits?
Credits are the cost of a player. In-form and star players typically cost more credits, while inexperienced or non-regular players cost less.</string>
    <string name="HowToPlay8">3. Join Contests</string>
    <string name="HowToPlay9">We have many different contest formats for you to join. Choose between free and paid contests, or even create a new private contest just for you and your friends. You play your way!</string>
    <string name="Legality">Stumps11 takes excessive care to comply with all the central and state legislation in India to ensure the safety of all our users. Every contest on our platform is delicately designed to comply with all the applicable regulations and statues in India. Below are the critical points from an Indian government’s judgment particularly regarding Stumps11’s game. A challenge to this discernment was also dismissed by the Supreme Court of India:\n"
"The court, in its ruling, stated that playing the Stumps11 game involves substantial skill, judgement and circumspection and that success on Stumps11 arises out of user\'s exercise considerable knowledge,attention, and judgement.\n"
"The court also affirmed that the element of skill holds away on the outcome of the Stumps11 game which follows the following format:\n"
"1. Participants/players/users have to draft a team consisting of at least the same number of players as playing in the real life sports team (for e.g. 11 players in cricket).\n"
"2. All contests are active and run for at least the duration of an actual sports match.\n"
"3. No team changes are permitted after the commencement of a match.\n"
"On this basis, the court adjourned that playing on Stumps11 constitutes a ‘game of mere skill’, which makes the Stumps11 game exempt from all the provisions of the Public Gambling Act 1867 (PGA)\n"
"Eventually, the court held that the Stumps11 game is a legal business activity protected under Article 19(1) (g) of the Constitution of India.</string>
    <string name="Privacy1">Our Privacy is Important</string>
    <string name="Privacy2">We provide online Fantasy Cricket game on Stumps11 for our Users’ entertainment in an absolutely safe, secure and trustworthy environment. We are committed to protecting the privacy of our Users. This Privacy Policy explains what information we collect from our Users, how we use their information, and what choices are available to our Users in this regard.This Privacy Policy forms part of our Website’s Terms of Service. Stumps11 respects your privacy and assures you that any information provided by you to Stumps11 is fully protected and will be used according to this Privacy Policy. To play game of Fantasy Cricket offered on Stumps11, you may have to provide certain information to us.</string>
    <string name="Privacy3">The Information We Collect</string>
    <string name="Privacy4">You are required to register with us to become our User and access our games. We collect the personal information of our Users. Examples of this include Users phone numbers. If you do not provide us with the required information, you may not be able to access our Games and other Services. We also collect information other than your personal information, such as your IP address. Such information is not associated with your personal information and cannot be linked to you personally. We may use IP addresses to analyse trends, administer the Website, track Users’ movement and gather broad demographic information for aggregate use. IP addresses are not linked to personally identifiable information. Stumps11.com is the sole owner of the information collected on this Website. We will not sell, share, or rent our Users’ information to others in ways different from what is disclosed in this Privacy Policy.</string>
    <string name="Privacy5">Usage of the Information Collected</string>
    <string name="Privacy6">Stumps11 does not disclose your personal information to any third party without your express permission. However, by registering on our Website or App, you grant us permission to use and share your personal information as stated in this Privacy Policy. We may need to disclose your information when required by law. We use your personal information to improve our Services and enhance your experience on our Website as well as to notify you of our new Fantasy Cricket offers, Products and Services. Your personal information may be shared with the sponsors and suppliers of prizes for our winners.Stumps11 uses a fool proof security system to prevent the loss, misuse and alteration of User information. Stumps11 is not responsible for any activity that takes place in your account.</string>
    <string name="Privacy7">Cookies</string>
    <string name="Privacy8">When you visit our Website or use our App, cookies may be left in your computer or phone. A cookie is a small text file that uniquely identifies your browser and which is assigned by the servers of Stumps11.com. It may be used to personalize your experience on Stumps11.com. Additionally, it may be used for authentication, game management and security purposes. A cookie in no way gives us access to your computer or any information about you other than the data you choose to share with us.Cookies may also be assigned by the advertisers of Stumps11 when you click on any of the advertisements shown on Stumps11.com. In such an event, the cookies are controlled by these advertisers and not by us.You can choose to accept or decline cookies. Most Web browsers automatically accept cookies, but you can usually modify your browser setting to decline cookies if you wish. This may prevent you from taking full advantage of our Products and Services.</string>
    <string name="Privacy9">Your Consent</string>
    <string name="Privacy10">By registering on our Website or App, you give your express consent for the collection and use of your personal information by Stumps11.com and its partners and affiliates. From time to time, we may change our methods of collecting information and modify our Privacy Policy. We will post such changes on this page so that you are always aware of what information we collect, how we use it, and under what circumstances we disclose it. Make sure that you stay updated on our Privacy Policy revisions.Stumps11 asserts that this Privacy Policy is only a description of its operation regarding User information. This Privacy Policy does not create any legal rights in your favour or in favour of any other person, group or organization. Stumps11 reserves the right to change this Privacy Policy at any time without prior notice.</string>
    <string name="Agreement">We advise you to read our Terms of Service carefully and understand them well. All the clauses in the Terms of Service of Stumps11 are delineated below and included in the medium of reference that can be accessed by clicking on the related links. You should make sure that you have read and understood our Agreement, including our Terms of Service, well before becoming a member of Stumps11. By registering on Stumps11, you agree to follow our Terms of Service, Privacy Policy and Game Rules. You are completely bound by our Agreement in any instance when you choose to use our Services or Games or software. We reserve the right to modify and amend our Terms of Service at any time. When we make any changes to our Terms of Service, we shall inform you about the revisions by sending you a notice at your email address registered with us. We shall also update such changes on our Website. We may make changes to our Terms of Service in order to review or change any of our Policies and Game Rules. If you do not agree to the changes made, you may cease your use of our Services of online Fantasy Cricket games by informing us that you have deleted your account. If you continue to use our Services after any amendments or changes, it shall be assumed that you have accepted the changes made in the Agreement and you agree to our new Terms.</string>
</resources>