<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".More.Privacy">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/Color1"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:tint="@color/white"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/textView6"
            android:layout_marginLeft="50dp"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:fontFamily="@font/amiko_bold"
            android:layout_height="match_parent"
            android:text="Privacy &amp; Policy" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/amiko_bold"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Privacy1" />

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="00dp"
                    android:fontFamily="@font/arbutus_slab"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Privacy2" />

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/amiko_bold"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Privacy3" />

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="00dp"
                    android:fontFamily="@font/arbutus_slab"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Privacy4" />

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/amiko_bold"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Privacy5" />

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="00dp"
                    android:fontFamily="@font/arbutus_slab"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Privacy6" />

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/amiko_bold"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Privacy7" />

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="00dp"
                    android:fontFamily="@font/arbutus_slab"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Privacy8" />

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/amiko_bold"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Privacy9" />

                <TextView
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="00dp"
                    android:fontFamily="@font/arbutus_slab"
                    android:textColor="@color/black"
                    android:layout_marginBottom="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Privacy10" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</RelativeLayout>