<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".More.HowToPlay">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/Color1"
        android:layout_height="50dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:tint="@color/white"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/textView6"
            android:layout_marginLeft="50dp"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:textColor="@color/white"
            android:fontFamily="@font/amiko_bold"
            android:layout_height="match_parent"
            android:text="How to Play" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <TextView
                    android:textSize="15dp"
                    android:fontFamily="@font/arbutus_slab"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/HowToPlay1" />

                <TextView
                    android:textSize="15dp"
                    android:fontFamily="@font/arbutus_slab"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/black"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/HowToPlay2" />

                <TextView
                    android:textSize="15dp"
                    android:fontFamily="@font/amiko_bold"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/Color1"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/HowToPlay3" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    tools:srcCompat="@drawable/image" />

                <TextView
                android:textSize="15dp"
                android:fontFamily="@font/arbutus_slab"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/HowToPlay4" />

                <TextView
                    android:textSize="15dp"
                    android:fontFamily="@font/amiko_bold"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/Color1"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/HowToPlay5" />

                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    tools:srcCompat="@drawable/image" />

                <TextView
                    android:textSize="15dp"
                    android:fontFamily="@font/arbutus_slab"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/HowToPlay6" />

                <TextView
                    android:textSize="15dp"
                    android:fontFamily="@font/arbutus_slab"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/black"
                    android:layout_marginTop="0dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/HowToPlay7" />

                <TextView
                    android:textSize="15dp"
                    android:fontFamily="@font/amiko_bold"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/Color1"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/HowToPlay8" />

                <ImageView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    tools:srcCompat="@drawable/image" />

                <TextView
                    android:textSize="15dp"
                    android:fontFamily="@font/arbutus_slab"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/HowToPlay9" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>


</RelativeLayout>